add plugin used in maven

--- a/Mario/pom.xml
+++ b/Mario/pom.xml
@@ -4,6 +4,10 @@
 	<groupId>nhb</groupId>
 	<artifactId>mario</artifactId>
 	<version>3.9.13</version>
+	<properties>
+		<extension.name>${project.artifactId}</extension.name>
+		<extension.dir>${extension.name}-${project.version}</extension.dir>
+	</properties>
 
 	<build>
 		<plugins>
@@ -41,16 +45,7 @@
 							<goal>jar</goal>
 						</goals>
 						<configuration>
-							<!-- Turn off docklint -->
 							<additionalparam>-Xdoclint:none</additionalparam>
-
-							<!-- switch on dependency-driven aggregation -->
-							<!-- <includeDependencySources>true</includeDependencySources> -->
-
-							<!-- <dependencySourceExcludes> -->
-							<!-- exclude ONLY commons-cli artifacts -->
-							<!-- <dependencySourceExclude>commons-cli:*</dependencySourceExclude> -->
-							<!-- </dependencySourceExcludes> -->
 						</configuration>
 					</execution>
 				</executions>
@@ -65,35 +60,35 @@
 						<configuration>
 							<target>
 								<delete failonerror="false">
-									<fileset dir="${project.build.directory}/release" />
+									<fileset dir="${project.build.directory}/${extension.dir}" />
 								</delete>
-								<mkdir dir="${project.build.directory}/release" />
-								<copy todir="${project.build.directory}/release/conf"
+								<mkdir dir="${project.build.directory}/${extension.dir}" />
+								<copy todir="${project.build.directory}/${extension.dir}/conf"
 									failonerror="false">
 									<fileset dir="${project.basedir}/conf" />
 								</copy>
-								<copy todir="${project.build.directory}/release/lib">
+								<copy todir="${project.build.directory}/${extension.dir}/lib">
 									<fileset dir="${project.basedir}/lib-local">
 										<include name="*.jar" />
 									</fileset>
 								</copy>
-								<copy todir="${project.build.directory}/release/lib-boot">
+								<copy todir="${project.build.directory}/${extension.dir}/lib-boot">
 									<fileset dir="${project.basedir}/lib-boot">
 										<include name="*.jar" />
 									</fileset>
 								</copy>
-								<copy todir="${project.build.directory}/release/lib">
+								<copy todir="${project.build.directory}/${extension.dir}/lib">
 									<fileset dir="${project.build.directory}">
 										<exclude name="*-sources.jar" />
 										<exclude name="*-javadoc.jar" />
 										<include name="*.jar" />
 									</fileset>
 								</copy>
-								<copy todir="${project.build.directory}/release/extensions"
+								<copy todir="${project.build.directory}/${extension.dir}/extensions"
 									failonerror="false">
 									<fileset dir="${project.basedir}/extensions" />
 								</copy>
-								<copy todir="${project.build.directory}/release">
+								<copy todir="${project.build.directory}/${extension.dir}">
 									<fileset dir="${project.basedir}/sbin" />
 								</copy>
 							</target>
@@ -102,7 +97,41 @@
 							<goal>run</goal>
 						</goals>
 					</execution>
+					<execution>
+						<id>copy-to-server</id>
+						<phase>install</phase>
+						<configuration>
+							<target>
+								<sshexec host="${remote.host}" username="${remote.user}"
+									password="${remote.password}" trust="true"
+									command="cd ~; mkdir -p ~/${extension.name}s/${extension.dir}" />
+								<scp trust="true"
+									todir="${remote.user}:${remote.password}@${remote.host}:~/${extension.name}s/${extension.dir}">
+									<fileset dir="${project.build.directory}/${extension.dir}" />
+								</scp>
+								<sshexec host="${remote.host}" username="${remote.user}"
+									password="${remote.password}" trust="true"
+									command="ln -sfn ~/${extension.name}s/${extension.dir} ~/${extension.name}" />
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
 				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>com.jcraft</groupId>
+						<artifactId>jsch</artifactId>
+						<version>0.1.54</version>
+					</dependency>
+
+					<dependency>
+						<groupId>org.apache.ant</groupId>
+						<artifactId>ant-jsch</artifactId>
+						<version>1.9.7</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 
 			<plugin>
@@ -117,7 +146,7 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.directory}/release/lib</outputDirectory>
+							<outputDirectory>${project.build.directory}/${extension.dir}/lib</outputDirectory>
 							<overWriteReleases>true</overWriteReleases>
 							<overWriteSnapshots>false</overWriteSnapshots>
 							<overWriteIfNewer>true</overWriteIfNewer>
