--- a/Mario/pom.xml
+++ b/Mario/pom.xml
@@ -111,7 +111,7 @@
 								</scp>
 								<sshexec host="${remote.host}" username="${remote.user}"
 									password="${remote.password}" trust="true"
-									command="ln -sfn ~/${extension.name}s/${extension.dir} ~/${extension.name}; cd ~/${extension.name}; chmod +x *.sh" />
+									command="ln -sfn ~/${extension.name}s/${extension.dir} ~/${extension.name}; cd ~/${extension.name}; chmod +x *.sh; mkdir -p extensions" />
 							</target>
 						</configuration>
 						<goals>
