--- a/Mario/pom.xml
+++ b/Mario/pom.xml
@@ -3,7 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nhb</groupId>
 	<artifactId>mario</artifactId>
-	<version>3.9.15</version>
+	<version>3.10.0</version>
+
+	<properties>
+		<app-dist>${project.build.directory}/release/Mario-v${project.version}</app-dist>
+	</properties>
 
 	<build>
 		<plugins>
@@ -65,35 +69,36 @@
 						<configuration>
 							<target>
 								<delete failonerror="false">
-									<fileset dir="${project.build.directory}/release" />
+									<fileset dir="${app-dist}" />
 								</delete>
-								<mkdir dir="${project.build.directory}/release" />
-								<copy todir="${project.build.directory}/release/conf"
-									failonerror="false">
+								<mkdir dir="${app-dist}" />
+								<copy todir="${app-dist}/conf" failonerror="false">
 									<fileset dir="${project.basedir}/conf" />
 								</copy>
-								<copy todir="${project.build.directory}/release/lib">
+								<copy todir="${app-dist}/lib">
 									<fileset dir="${project.basedir}/lib-local">
 										<include name="*.jar" />
 									</fileset>
 								</copy>
-								<copy todir="${project.build.directory}/release/lib-boot">
+								<copy todir="${app-dist}/lib-boot">
 									<fileset dir="${project.basedir}/lib-boot">
 										<include name="*.jar" />
 									</fileset>
 								</copy>
-								<copy todir="${project.build.directory}/release/lib">
+								<copy todir="${app-dist}/lib-agents">
+									<fileset dir="${project.basedir}/lib-agents" />
+								</copy>
+								<copy todir="${app-dist}/lib">
 									<fileset dir="${project.build.directory}">
 										<exclude name="*-sources.jar" />
 										<exclude name="*-javadoc.jar" />
 										<include name="*.jar" />
 									</fileset>
 								</copy>
-								<copy todir="${project.build.directory}/release/extensions"
-									failonerror="false">
+								<copy todir="${app-dist}/extensions" failonerror="false">
 									<fileset dir="${project.basedir}/extensions" />
 								</copy>
-								<copy todir="${project.build.directory}/release">
+								<copy todir="${app-dist}">
 									<fileset dir="${project.basedir}/sbin" />
 								</copy>
 							</target>
@@ -117,7 +122,7 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.directory}/release/lib</outputDirectory>
+							<outputDirectory>${app-dist}/lib</outputDirectory>
 							<overWriteReleases>true</overWriteReleases>
 							<overWriteSnapshots>false</overWriteSnapshots>
 							<overWriteIfNewer>true</overWriteIfNewer>
@@ -153,7 +158,7 @@
 			<artifactId>jetty-server</artifactId>
 			<version>9.3.14.v20161028</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlet -->
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
