Update ssl for websocket (see samp.extension.xml), upgrade version to 3.10.4

--- a/Mario/pom.xml
+++ b/Mario/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nhb</groupId>
 	<artifactId>mario</artifactId>
-	<version>3.10.3</version>
+	<version>3.10.4</version>
 	<properties>
 		<project.name>${project.artifactId}</project.name>
 		<project.dir>${project.name}-${project.version}</project.dir>
@@ -269,6 +269,13 @@
 					<artifactId>netty-transport</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.12</version>
 		</dependency>
 	</dependencies>
 
