--- a/Mario/pom.xml
+++ b/Mario/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nhb</groupId>
 	<artifactId>mario</artifactId>
-	<version>3.14.8</version>
+	<version>3.15.0</version>
 
 	<properties>
 		<project.name>${project.artifactId}</project.name>
@@ -173,6 +173,12 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<version>2.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.moonlit</groupId>
+			<artifactId>lfsappenders</artifactId>
+			<version>4.3.2</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
