--- a/Mario/pom.xml
+++ b/Mario/pom.xml
@@ -2,12 +2,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nhb</groupId>
 	<artifactId>mario</artifactId>
-	<version>3.17.3</version>
+	<version>3.17.4</version>
 
 	<properties>
 		<project.name>${project.artifactId}</project.name>
 		<project.dir>${project.name}-${project.version}</project.dir>
-		<nhb.common.version>1.3.2</nhb.common.version>
+		<nhb.common.version>1.3.3</nhb.common.version>
 	</properties>
 
 	<build>
@@ -99,24 +99,25 @@
 							<goal>run</goal>
 						</goals>
 					</execution>
-					<execution>
-						<id>copy-to-server</id>
-						<phase>install</phase>
-						<configuration>
-							<target>
-								<sshexec host="${remote.host}" username="${remote.user}" password="${remote.password}" trust="true" command="cd ~; mkdir -p ~/${project.name}s/${project.dir}"
-									failonerror="false" />
-								<scp failonerror="false" trust="true" todir="${remote.user}:${remote.password}@${remote.host}:~/${project.name}s/${project.dir}">
-									<fileset dir="${project.build.directory}/${project.dir}" />
-								</scp>
-								<sshexec failonerror="false" host="${remote.host}" username="${remote.user}" password="${remote.password}" trust="true"
-									command="ln -sfn ~/${project.name}s/${project.dir} ~/${project.name}; cd ~/${project.name}; chmod +x *.sh; mkdir -p extensions; mkdir -p extensions/__lib__" />
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
+					<!-- <execution> -->
+					<!-- <id>copy-to-server</id> -->
+					<!-- <phase>install</phase> -->
+					<!-- <configuration> -->
+					<!-- <target> -->
+					<!-- <sshexec host="${remote.host}" username="${remote.user}" password="${remote.password}" trust="true" command="cd ~; mkdir -p ~/${project.name}s/${project.dir}" -->
+					<!-- failonerror="false" /> -->
+					<!-- <scp failonerror="false" trust="true" todir="${remote.user}:${remote.password}@${remote.host}:~/${project.name}s/${project.dir}"> -->
+					<!-- <fileset dir="${project.build.directory}/${project.dir}" /> -->
+					<!-- </scp> -->
+					<!-- <sshexec failonerror="false" host="${remote.host}" username="${remote.user}" password="${remote.password}" trust="true" -->
+					<!-- command="ln -sfn ~/${project.name}s/${project.dir} ~/${project.name}; cd ~/${project.name}; chmod +x *.sh; mkdir -p extensions; mkdir -p extensions/__lib__" 
+						/> -->
+					<!-- </target> -->
+					<!-- </configuration> -->
+					<!-- <goals> -->
+					<!-- <goal>run</goal> -->
+					<!-- </goals> -->
+					<!-- </execution> -->
 				</executions>
 				<dependencies>
 					<dependency>
