--- a/Mario/conf/system.properties
+++ b/Mario/conf/system.properties
@@ -4,3 +4,4 @@ application.scheduler.worker=8
 system.timezone=7
 
 server.globalProperties.file=conf/global-properties.xml
+PuElement.defaultBufferSize=1024
