--- a/Mario/pom.xml
+++ b/Mario/pom.xml
@@ -315,9 +315,14 @@
 	<distributionManagement>
 		<repository>
 			<id>central</id>
-			<name>puppet-releases</name>
-			<url>http://artifactory.puppetserver.com/libs-release-local</url>
+			<name>releases</name>
+			<url>${env.ARTIFACTORY_CONTEXT_URL}/libs-release-local</url>
 		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>snapshots</name>
+			<url>${env.ARTIFACTORY_CONTEXT_URL}/libs-snapshot-local</url>
+		</snapshotRepository>
 	</distributionManagement>
 </project>
 
